【admin】添加谷歌字体

--- a/admin/src/index.html
+++ b/admin/src/index.html
@@ -21,12 +21,11 @@ License: You must have a valid license purchased only from themeforest(the above
   <title>Apex - Angular & Bootstrap 4 HTML Admin Template</title>
   <base href="/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
   <link href="assets/fonts/feather/style.min.css" rel="stylesheet">
   <link href="assets/fonts/simple-line-icons/style.css" rel="stylesheet">
   <link href="assets/fonts/weathericons/css/weather-icons.css" rel="stylesheet">
   <link href="assets/fonts/weathericons/css/weather-icons-wind.css" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900|Montserrat:300,400,500,600,700,800,900'
+  <link href='assets/fonts/family&montserrat/rubik&montserrat_font.css'
     rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="assets/vendor/pace/themes/black/pace-theme-flash.css" />
   <style type="text/css">
